added error handling

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+
   </head>
 
   <body>
@@ -26,7 +27,8 @@
     </div>
     <audio class="sound" src="chime.mp3"></audio>
     <!-- sound to be played when we click icon => http://soundbible.com/1598-Electronic-Chime.html -->
-    <script src="index.js"></script>
-    <!-- link to index.js script -->
+    <div id="search-result" class ="results">
+    </div>
+        <script src="index.js"></script>
   </body>
 </html>
