parsed json and fetched data

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <!-- sound to be played when we click icon => http://soundbible.com/1598-Electronic-Chime.html -->
     <div id="search-result" class ="results">
     </div>
-        <script src="index.js"></script>
+        <script src="scripts/index.js"></script>
+        
   </body>
 </html>
