--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
     </div>
     <audio class="sound" src="chime.mp3"></audio>
     <!-- sound to be played when we click icon => http://soundbible.com/1598-Electronic-Chime.html -->
-    <div id="search-result" class ="results">
-    </div>
-        <script src="scripts/index.js"></script>
+    <div id="search-result" class ="results"></div>
+    <script src="scripts/index.js"></script>
         
   </body>
 </html>
