fixed issue with voice

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </head>
 
   <body>
+    <h1 class='heading'>Voice Search App</h1>
     <div class="container">
       <!--page container -->
       <div class="text-box" contenteditable="true"></div>
@@ -25,8 +26,7 @@
       <i class="fa fa-microphone"></i>
       <!-- microphone icon to be clicked before speaking -->
     </div>
-    <audio class="sound" src="chime.mp3"></audio>
-    <!-- sound to be played when we click icon => http://soundbible.com/1598-Electronic-Chime.html -->
+    <p id="items-count"></p>
     <div id="search-result" class ="results"></div>
     <script src="scripts/index.js"></script>
         
